/*
 * $Id: ChangeLog,v 1.2826 2004/04/23 15:00:04 lf_sfnet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-23 15:46 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
  * source/vm/memvars.c
    ! Fixed support for := Operator Overloading

  * source/rtl/win32ole.prg
    - Removed strat TraceLog()

2004-04-23 17:00 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/rdd/dbcmd.c
    + hb_sqlescape renamed hb_strescape since added to __dbdelim also.
      Fixed gcc's GPF and number export in __dbdelim and __dbsql.

2004-04-23 12:00 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/rdd/dbcmd.c
    + added functions __dbsql, hb_Dbf2Sql, hb_ExportSqlVar, hb_sqlescape.
      It could be the base for a COPY TO ... SQL SCRIPT command but at the moment
      is hard coded for FireBirdSQL.

2004-04-23 13:05 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/gtwvt/gtwvt.c
    * Formatting for recent changes.

    + Wvt_setPointer( nPointer )
      Set the mouse pointer shape to predefined mouse pointer which are in the
      range of 1-15. 1-12 are usable on all win versions whereas 13-15 are for
      winver > 4. To know what 1-15 constants means, please examine the gtwvt.c,
      at per now I have not found a suitable .ch file to place them ( someone to
      point ? ).

      Also please note that if you set pointer through it, all windows running as
      WVT windows will have the same pointer shape within them. So use it with care.

2004-04-23 00:30 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * source/rtl/memoline.c
    ! fix to me more clipper compatible,(file provided by Pritpal Bedi

2004-04-22 16:04 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * ChangeLog
    ! Removed an accidental CVS conflict indicator.
